--- a/.github/workflows/mc-update.yml
+++ b/.github/workflows/mc-update.yml
@@ -1,8 +1,8 @@
 name: Minecraft Update
 
 on:
-  schedule:
-    - cron: "0 * * * *"
+  # schedule:
+  #   - cron: "0 * * * *"
   workflow_dispatch:
 
 jobs:
